--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <h2>Projects</h2>
   <ul>
     <li>Sales Forecasting Dashboard (Excel)</li>
-    <li>Housing & Discretionary Spending Analysis</li>
+    <li>Client Insights & KPI Dashboard</li>
     <li>Tableau Dashboards</li>
   </ul>
 
