--- a/index.html
+++ b/index.html
@@ -2,29 +2,185 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Yisa Ajibola | Portfolio</title>
+  <title>Yisa Ajibola Ahmed | Data Analyst Portfolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
-      font-family: Arial, sans-serif;
-      max-width: 900px;
-      margin: 60px auto;
+      font-family: Arial, Helvetica, sans-serif;
+      max-width: 1000px;
+      margin: auto;
+      padding: 20px;
       line-height: 1.6;
+      color: #222;
+    }
+    h1, h2, h3 {
+      color: #0f4c81;
+    }
+    hr {
+      margin: 30px 0;
+    }
+    img {
+      width: 100%;
+      max-width: 950px;
+      margin: 15px 0;
+      border-radius: 6px;
+      border: 1px solid #ddd;
+    }
+    ul {
+      margin-left: 20px;
+    }
+    .tagline {
+      font-size: 1.1em;
+      font-weight: bold;
+    }
+    .contact {
+      margin-top: 10px;
+      font-size: 0.95em;
+    }
+    .project {
+      margin-bottom: 50px;
     }
   </style>
 </head>
+
 <body>
-  <h1>Yisa Ajibola</h1>
-  <p>Data Analyst | Business Graduate | Portfolio</p>
 
-  <h2>Projects</h2>
-  <ul>
-    <li>Sales Forecasting Dashboard (Excel)</li>
-    <li>Client Insights & KPI Dashboard</li>
-    <li>Tableau Dashboards</li>
-  </ul>
+<h1>Hi, I'm Yisa Ajibola Ahmed 👋</h1>
+<p class="tagline">
+  Data Analyst | Client Insights | Regulatory Analytics | Forecasting | KPI Reporting
+</p>
 
-  <p>
-    GitHub: <a href="https://github.com/YisaAjibola">github.com/YisaAjibola</a>
-  </p>
+<p>
+I’m a Business & Data Analyst with <strong>~5 years’ combined experience</strong> across
+<strong>client insights, regulatory data, forecasting, KPI reporting, and dashboards</strong>.
+I turn complex datasets into <strong>clear insights, stories, and recommendations</strong>
+for stakeholders.
+</p>
+
+<p class="contact">
+📍 Dublin, Ireland |
+📧 <a href="mailto:yisaajibola101@gmail.com">yisaajibola101@gmail.com</a> |
+🔗 <a href="https://www.linkedin.com/in/ajibola-yisa-a90a54282" target="_blank">LinkedIn</a>
+</p>
+
+<hr>
+
+<h2>🔧 Core Skills</h2>
+<ul>
+  <li><strong>SQL:</strong> joins, aggregations, validation, reporting extracts</li>
+  <li><strong>Excel:</strong> Power Query, PivotTables, dashboards, forecasting models</li>
+  <li><strong>Tableau / Power BI:</strong> KPI dashboards, performance reporting, storytelling</li>
+  <li><strong>Analytics:</strong> trend analysis, budget vs actual, KPI design, forecasting</li>
+  <li><strong>Stakeholders:</strong> client reporting, insight writing, presenting findings clearly</li>
+</ul>
+
+<hr>
+
+<h2>💼 Experience Snapshot</h2>
+
+<h3>Data Analyst — Corlytics (Dublin) | Jul 2023 – Jun 2025</h3>
+<ul>
+  <li>Cleaned and validated regulatory datasets supporting reporting cycles</li>
+  <li>Built and maintained Tableau dashboards for regulatory trends, themes, and risks</li>
+  <li>Used SQL for weekly and monthly data extracts and insight reporting</li>
+  <li>Contributed to client-facing reports and improved data processes</li>
+</ul>
+
+<h3>Senior Data Analyst — Weevil Company (Lagos) | Jan 2021 – Jun 2023</h3>
+<ul>
+  <li>Built automated Excel dashboards and KPI reports for management</li>
+  <li>Forecasted demand and supported inventory optimisation decisions</li>
+  <li>Delivered pricing and profitability insights for campaigns and launches</li>
+</ul>
+
+<h3>Night Pub & Hotel Manager — Wetherspoon (Swords) | Summer 2025 – Present</h3>
+<ul>
+  <li>Operational reporting, reconciliation, performance tracking, and incident reporting</li>
+</ul>
+
+<hr>
+
+<h2>📂 Featured Portfolio Projects</h2>
+
+<div class="project">
+<h3>1️⃣ Regulatory Insights Dashboard (Tableau)</h3>
+<p><strong>Tools:</strong> Tableau, SQL, Excel</p>
+<ul>
+  <li>Dashboard showing regulatory trends, categories, and risk themes</li>
+  <li>Data cleaning notes and stakeholder-ready summaries</li>
+</ul>
+
+<h4>📊 Dashboard Overview</h4>
+<p><strong>Revenue Drivers, Promotion Impact & Material Analysis</strong></p>
+<img src="images/dashboard_overview.png" alt="Regulatory Dashboard Overview">
+
+<p><strong>Sales Volume & Revenue by Season and Origin</strong></p>
+<img src="images/dashboard_insights.png" alt="Regulatory Insights Dashboard">
+</div>
+
+<hr>
+
+<div class="project">
+<h3>2️⃣ Sales Forecasting & Budget vs Actual (Excel)</h3>
+<p><strong>Tools:</strong> Excel (Power Query, PivotTables, Forecasting)</p>
+
+<p>
+This project showcases a <strong>sales forecasting and performance analysis dashboard</strong>
+built in Microsoft Excel. It compares latest year vs prior year sales and profit,
+highlights growth trends, and supports budget vs actual analysis across categories,
+customer segments, and regions.
+</p>
+
+<p><em>
+Note: Due to data confidentiality, the original Excel workbook is not shared.
+Screenshots are provided to demonstrate analytical capability.
+</em></p>
+
+<img src="images/forecast_dashboard_overview.png" alt="Sales Forecast Dashboard">
+
+<h4>Key Insights</h4>
+<ul>
+  <li>Strong year-over-year sales and profit growth</li>
+  <li>Technology and Furniture are major revenue drivers</li>
+  <li>Seasonality patterns support improved forecasting accuracy</li>
+  <li>Sales concentration highlights geographic risk and opportunity</li>
+</ul>
+</div>
+
+<hr>
+
+<div class="project">
+<h3>3️⃣ Client Insights & KPI Dashboard — Pizza Sales Analysis</h3>
+<p><strong>Tools:</strong> SQL, Excel, Tableau / Power BI</p>
+
+<p>
+Client insights analysis based on an interactive pizza sales dashboard,
+focusing on sales performance, customer behaviour, seasonality, and product mix.
+</p>
+
+<p><em>
+Note: Raw datasets are not shared. This project focuses on dashboard output and
+analytical interpretation.
+</em></p>
+
+<img src="images/pizza_sales_dashboard.png" alt="Pizza Sales Dashboard">
+
+<h4>Key Insights</h4>
+<ul>
+  <li>Orders peak on weekends, especially Friday and Saturday evenings</li>
+  <li>July and January show the highest monthly order volumes</li>
+  <li>Classic pizzas contribute the largest share of total sales</li>
+  <li>Large-sized pizzas generate the highest revenue</li>
+</ul>
+</div>
+
+<hr>
+
+<h2>🧰 What I’m Building Next</h2>
+<ul>
+  <li>Advanced SQL case studies (CTEs, window functions)</li>
+  <li>Power BI dashboards with DAX measures</li>
+</ul>
+
 </body>
 </html>
